--- a/admins/templates/adminlogin.html
+++ b/admins/templates/adminlogin.html
@@ -2,44 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <!-- Include Bootstrap CSS for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>user management</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Include custom CSS for centering the form -->
-<style>
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-</style>
+    
 
 
 </head>
-<body>
+<body class="d-flex justify-content-center align-items-center" style="height: 100vh; margin: 0;">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col col-md-12 col-lg">
+            <div class="col-10 col-sm-8 col-md-6 col-lg-4">
                 <div class="card">
                     <div class="card-header text-center">
                         Login
                     </div>
                     <div class="card-body">
-                        
                         <form method="POST">
                             {% csrf_token %}
-                            <div class="form-group" >
+                            <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="text" class="form-control" id="staffname" placeholder="Enter username" required>
+                                <input type="text" class="form-control" name="staffname" id="staffname" placeholder="Enter username" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
                             </div>
-                            
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary">Log in</button>
                             <br>
                             {% if messages %}
                             <ul style="color: red;">
@@ -54,9 +43,6 @@
             </div>
         </div>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
