--- a/admins/templates/sidebar.html
+++ b/admins/templates/sidebar.html
@@ -31,10 +31,10 @@
         <div class="l-navbar" id="nav-bar">
             <nav class="nav">
                 <div> 
-                    <a class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">BBBootstrap</span> </a>
+                    <a class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Music Beats</span> </a>
                     <div class="nav_list"> 
                         <a href="{% url 'dash' %}" class="nav_link {% if request.path == '/staff/dash/' %}active{% endif %}"> <i class='bx bx-home-circle nav_icon'></i> <span class="nav_name">Dashboard</span> </a> 
-                        <a href="{% url 'usermanager' %}" class="nav_link {% if request.path == '/staff/usermanager/' %}active{% endif %}"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">User Management</span> </a>  
+                        <a href="{% url 'user-mng' %}" class="nav_link {% if request.path == '/staff/user-mng/' %}active{% endif %}"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">User Management</span> </a>  
                         <a href="{% url 'category' %}" class="nav_link {% if request.path == '/staff/category/' %}active{% endif %}"> <i class='bx bx-grid-alt nav_icon'></i> <span class="nav_name">Category</span> </a>
                         <a href="{% url 'product' %}" class="nav_link {% if request.path == '/staff/product/' %}active{% endif %}"> <i class='bx bx-shopping-bag nav_icon'></i> <span class="nav_name">Product</span> </a> 
                         <a href="#" class="nav_link"> <i class='bx bx-folder nav_icon'></i> <span class="nav_name">Files</span> </a>
